--- a/asvla/src/components/forge/DonateButton/Donate.scss
+++ b/asvla/src/components/forge/DonateButton/Donate.scss
@@ -17,13 +17,14 @@
 
 .donation-popup {
   position: absolute;
-  top: 20%;
+  top: 65%;
   left: 50%;
   transform: translateX(-50%);
   background: #fff;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 5;
 }
 
 .donation-popup-content {
