--- a/asvla/src/components/forge/winterVeilPromo/Winterveil.scss
+++ b/asvla/src/components/forge/winterVeilPromo/Winterveil.scss
@@ -12,7 +12,7 @@
   position: relative;
 }
 
-.container .container__header {
+.winterVeil .container__header {
   width: 353px;
   height: 120px;
   margin: 50px auto 20px auto;
