--- a/asvla/src/components/forge/DonateButton/Donate.scss
+++ b/asvla/src/components/forge/DonateButton/Donate.scss
@@ -20,17 +20,25 @@
   top: 65%;
   left: 50%;
   transform: translateX(-50%);
-  background: #fff;
+  background: #0e233c;
   padding: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   z-index: 5;
 }
 
+
 .donation-popup-content {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.donation-popup-content h3 {
+  margin-bottom: 10px;
+  color: #4caf50;
+  font-weight: 800;
+  text-transform: uppercase;
+  font-size: 18px;
 }
 
 .donation-popup input {
@@ -55,7 +63,7 @@
 
   button {
     padding: 8px 16px;
-    background-color: #ccc;
+    background-color: #b79827;
     border: none;
     cursor: pointer;
   }
