--- a/asvla/src/components/forge/axiosRegister/LogReg.scss
+++ b/asvla/src/components/forge/axiosRegister/LogReg.scss
@@ -1,3 +1,69 @@
+@use "../../../assets/styles/mediaQuerys.scss";
+
 .login-box {
-  padding-top: 500px;
+  margin: 30vh auto 30vh auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  @include mediaQuerys.mobile {
+    margin: 20vh auto 20vh auto;
+  }
+}
+
+.login-box h2 {
+  font-size: 25px;
+  color: #fff;
+  padding-bottom: 20px;
+
+  @include mediaQuerys.mobile {
+    font-size: 6vw;
+    padding-bottom: 5vw;
+  }
+}
+.login-box form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+
+  @include mediaQuerys.mobile {
+    gap: 5vw;
+  }
+}
+
+.login-box input {
+  width: 300px;
+  height: 40px;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  font-size: 16px;
+
+  @include mediaQuerys.mobile {
+    width: 60vw;
+    height: 8vw;
+    padding: 2vw;
+  }
+}
+.login-box button {
+  width: 150px;
+  height: 40px;
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  font-size: 16px;
+  background-color: #0d7e3e;
+  color: #fff;
+  cursor: pointer;
+  text-transform: uppercase;
+
+  @include mediaQuerys.mobile {
+    width: 40vw;
+    height: 10vw;
+    padding: 2vw;
+    border-radius: 1.33vw;
+    font-size: 4vw;
+  }
 }
