--- a/asvla/src/components/forge/redeem/Redeem.scss
+++ b/asvla/src/components/forge/redeem/Redeem.scss
@@ -2,7 +2,8 @@
 
 .redeem-container {
   width: 500px;
-  height: 350px;
+  height: auto;
+  margin: 0 auto;
   background-color: #f9f9f9;
   border: 1px solid #ccc;
   border-radius: 8px;
@@ -10,7 +11,19 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  position: relative;
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 1000;
+}
+.redeem-container .EgtRedeem {
+  width: 300px;
+  height: 30px;
+  background: black;
+  margin: 10px auto;
+  color: #fff;
+  font-size: 30px;
 }
 
 .redeem-header {
