--- a/asvla/src/components/forge/winterVeilPromo/Winterveil.scss
+++ b/asvla/src/components/forge/winterVeilPromo/Winterveil.scss
@@ -403,7 +403,7 @@
 .container .container__wager {
   border-radius: 29px;
   border: 2px solid #414a5e;
-  background: #555f74;
+  background: #3a7077;
   width: 50%;
   margin: 0 auto;
   display: flex;
